# goodcal

./: .clang-format  CMakeLists.txt
src/: date.hpp  formatting.hpp  key.hpp  main.cpp  month.cpp  month.hpp
